<resources>
    <string name="app_name">Tap &amp; Go</string>
    <string name="center_on_user">Center on user</string>
    <string name="stand">Places %d</string>
    <string name="bike">Vélos %d</string>
    <string name="last_update">Dernière mise à jour: %s</string>
    <string name="smart_destination">Smart Destination</string>
    <string name="go">GO</string>
    <string name="destination">Destination</string>
    <string name="pickup">Station de départ</string>
    <string name="dropoff">Station d\'arrivée</string>
    <string name="departure">Adresse actuelle</string>
    <string name="destination_input_hint">Destination</string>
</resources>