<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawablePadding="4dp"
                android:text="@string/departure"
                app:drawableStartCompat="@drawable/ic_baseline_person_pin_24" />

            <TextView
                android:id="@+id/departure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="1 rue des pommiers" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="12dp"
                android:drawablePadding="4dp"
                android:text="@string/pickup"
                app:drawableStartCompat="@drawable/ic_bike_svgrepo_com" />

            <TextView
                android:id="@+id/pickup_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="Station duchesse Anne" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="12dp"
                android:drawablePadding="4dp"
                android:text="@string/dropoff"
                app:drawableStartCompat="@drawable/ic_parking_svgrepo_com" />

            <TextView
                android:id="@+id/dropoff_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="Station Orvault" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="12dp"
                android:drawablePadding="4dp"
                android:text="@string/destination"
                app:drawableStartCompat="@drawable/ic_baseline_flag_24" />

            <TextView
                android:id="@+id/arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="12 rue Orvault" />

            <Button
                android:id="@+id/google_map_itinerary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/go" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>